# ganren

./: .env.example  .gitignore  .mcp.json.example  ONBOARDING_FOR_CLAUDE.md  README.md  product-demo.html  pyproject.toml
docs/: USAGE.md  V2_BACKLOG.md
docs/superpowers/plans/: 2026-06-05-ganren-collab-platform.md  2026-06-10-scheduled-slack-digest.md
docs/superpowers/specs/: 2026-06-05-ganren-collab-platform-design.md  2026-06-10-scheduled-slack-digest-design.md
src/ganren_platform/: config.py  db.py  errors.py  main.py  models.py
src/ganren_platform/http_api/: app.py  routes_inbox.py  routes_questions.py  routes_tasks.py
src/ganren_platform/mcp_api/: server.py
src/ganren_platform/migrations/: 001_initial.sql
src/ganren_platform/notifications/: digest.py  scheduler.py  slack.py
src/ganren_platform/service/: events.py  inbox.py  questions.py  tasks.py
tests/: conftest.py  test_db.py  test_http_api.py  test_mcp_api.py  test_models.py  test_notifications_digest.py  test_notifications_scheduler.py  test_service_events.py  test_service_inbox.py  test_service_questions.py  test_service_tasks_abandon_cancel.py  test_service_tasks_bypass.py  test_service_tasks_bypass_concurrency.py  test_service_tasks_claim.py  test_service_tasks_concurrency.py  test_service_tasks_list.py  test_service_tasks_publish.py  test_service_tasks_review.py  test_slack.py  test_v2_config.py  test_v2_digest_e2e.py
tools/: add_actor.py  setup_client.py
