[project]
name = "ganren-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp[cli]>=1.2",
    "pydantic>=2.9",
    "python-ulid>=3.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ganren_platform"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
